--- a/src/views/CreatePage/CreatePage.pug
+++ b/src/views/CreatePage/CreatePage.pug
@@ -16,6 +16,7 @@ include ../../../node_modules/bempug/index
       :key="todo.id"
       :id="todo.id"
       state="create"
+      ref="todoItem"
     )
   +e('button-wrapper', {})
     brand-button(
