--- a/src/components/BrandButton/BrandButton.pug
+++ b/src/components/BrandButton/BrandButton.pug
@@ -6,5 +6,6 @@ include ../../../node_modules/bempug/index
 	:type="selfType"
 	:class="{'brand-button_theme-light' : themeLight," +
 	" 'brand-button_theme-red' : themeRed, " +
-	" 'brand-button_theme-green' : themeGreen}")
+	" 'brand-button_theme-green' : themeGreen, " +
+	" 'brand-button_disable' : disable}")
 	+e('content', {})() {{label}}
