--- a/src/views/EditPage/EditPage.pug
+++ b/src/views/EditPage/EditPage.pug
@@ -17,9 +17,10 @@ include ../../../node_modules/bempug/index
         v-for="(todoItem, index) in notDoneTodoList"
         :key="todoItem.id"
         :id="todoItem.id"
-        state="edit"
         :parentId="todo.id"
         :todoForInput="todoItem.title"
+        state="edit"
+        ref="todoItem"
       )
     +e('button-wrapper', {})
       brand-button(
